--- a/_config.yml
+++ b/_config.yml
@@ -21,34 +21,37 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy                          # the main title
+title: Amro Hendawi                          # the main title
 
-tagline: A text-focused Jekyll theme   # it will display as the sub-title
+tagline: In this blog I share my work and publications to the world   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  A minimal, responsive, and powerful Jekyll theme for presenting professional writing.
+  A minimal, responsive, and powerful blog for presenting my professional blog posts.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ''
+url: 'https://amrohendawi.github.io'
 
 github:
-  username: github_username             # change to your github username
+  username: amrohendawi             # change to your github username
 
-twitter:
-  username: twitter_username            # change to your twitter username
+# twitter:
+#   username: hendawi_amro            # change to your twitter username
+
+linkedin:
+  username: amro-hendawi # change to your linkedin username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@doamin.com             # change to your email address
+  name: Amro Hendawi
+  email: amro.hendawi@gmail.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username      # change to your twitter homepage
-    - https://github.com/username       # change to your github homepage
+    # - https://twitter.com/hendawi_amro      # change to your twitter homepage
+    - https://github.com/amrohendawi       # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+    - https://www.linkedin.com/in/amro-hendawi
 
 google_site_verification:               # fill in to your verification string
 
@@ -83,7 +86,7 @@ theme_mode:   # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: https://media-exp1.licdn.com/dms/image/C4D03AQGV0QQiwC8dqQ/profile-displayphoto-shrink_400_400/0/1648027624138?e=1671667200&v=beta&t=srNPVWBKqeZLlXCqf5Wzl8-f4EDH_u9_8UJ0upVqQUE
 
 # boolean type, the global switch for ToC in posts.
 toc: true
